test(e2e): pin controller to exact 10.4.57 via thin custom image
Replace linuxserver:10.3.58 with a version-locked image (test/e2e/controller):
installs the pinned, sha256-verified unifi 10.4.57 .deb on Temurin 25 (10.4.57's
launcher is Java 25), runs ace.jar against external mongo via an entrypoint that
writes system.properties from MONGO_* env (+ the .deb's required --add-opens).
Closes the controller<->spec version gap; still ZERO caps/privileged/cgroup.
Verified live: server_version=10.4.57, /proxy/network/integration via Caddy ->403,
container inspect Privileged=false CapAdd=[]. Reproducible build confirmed (pin
verifies). seed data dir is now /usr/lib/unifi/data.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>