@@ -19,7 +19,7 @@ GitHub-hosted runners**:
 | Service | Image | Role |
 |---------|-------|------|
 | `mongo` | `mongo:7.0` | the controller's datastore |
-| `unifi` | `lscr.io/linuxserver/unifi-network-application:10.3.58` | the Network app |
+| `unifi` | built from `./controller` (pinned **10.4.57** .deb on Temurin-25 JRE) | the Network app |
 | `tls`   | `caddy:2` | TLS terminator + `/proxy/network` prefix rewrite |
 
 **Why the plain Network app image (not "UniFi OS Server"):** the Integration API
@@ -34,18 +34,40 @@ for the edge proxy: it terminates TLS on `:443` (host `:11443`) and
 `https://unifi:8443/integration/v1/…`. This is the same pattern as the Tier-1
 mock — no heavy, unlicensed full-OS image, no elevated host integration.
 
-## Version gap (read this)
+## Pinned controller — EXACT spec version (10.4.57)
 
-- The Network app image is pinned **10.3.58** — the **newest** linuxserver tag
-  available (no 10.4.x image exists yet).
-- The vendored spec (`openapi/pin.env`) is **10.4.57**.
+The `unifi` service is **built from `test/e2e/controller/`** (not pulled from a
+registry), so the live tier runs on the **exact** version the provider schema is
+generated against — **no version gap** between controller and spec:
 
-These **differ on purpose**: 10.3.58 is the closest controller we can run in a
-plain container, and the e2e tier validates the plumbing + a stable CRUD
-round-trip against it. The round-trip subject (`DnsARecord`) is deliberately
-minimal so the small version delta does not bite. The runtime version is
-recorded in `seed.env` (`NETWORK_VERSION`) at bake time; if a 10.4.x image
-appears, bump the `image:` tag and re-bake.
+- Controller: `test/e2e/controller/Dockerfile`, `UNIFI_VERSION=10.4.57`.
+- Spec (`openapi/pin.env`): **10.4.57**. They match by construction; `seed.env`'s
+  `NETWORK_VERSION` should read `10.4.57`.
+
+### How the image is pinned (trust-on-first-use, cf. `openapi/fetch.sh`)
+
+The Dockerfile downloads the official Ubiquiti `.deb` at build time and
+**checksum-verifies** it against a baked sha256, so the build fails if the
+upstream artifact ever changes under the same version path:
+
+- Artifact: `https://dl.ui.com/unifi/10.4.57/unifi_sysvinit_all.deb`
+- Pinned sha256: `fc378cf8cd2bec3d334bf7b72eabfcd1861e5fae67b9c16735471132105b2072`
+
+The `.deb` is installed via `dpkg-deb -x` (a plain extract — no systemd, no
+maintainer scripts) onto a **Temurin 25 JRE** base: 10.4.57's launcher is Java
+class file version 69.0 (Java 25), so Java 17/21 throw `UnsupportedClassVersion`.
+`entrypoint.sh` writes `/usr/lib/unifi/data/system.properties` from the `MONGO_*`
+env (same contract the linuxserver image used, so the compose env is unchanged)
+to point at the external `mongo` service, then launches `ace.jar` with the
+`--add-opens` flags the `.deb`'s own init script specifies (required on a modern
+JDK or the web context fails to initialize). See `controller/README.md`.
+
+### Re-pinning on a spec bump
+
+When `openapi/pin.env` moves to a new version, bump the controller in lockstep:
+edit `UNIFI_VERSION` in `controller/Dockerfile`, download the new `.deb`,
+`sha256sum` it, set `UNIFI_SHA256` to that value, update the sha256 here, and
+re-bake (`make e2e-bootstrap`).
 
 ## Prerequisites
 
@@ -75,8 +97,8 @@ generates the Caddy cert (`gen-certs.sh`) and drives `test/e2e/bootstrap.sh`:
    200 through Caddy), then writes it + the detected Network version to
    **`test/e2e/seed.env`**.
 4. Stops the Network app (clean DB) and snapshots the seed **compactly**:
-   `mongodump --archive --gzip` of the app DBs + a `tar` of `/config`, combined
-   into **`test/e2e/unifi-seed.tgz`**.
+   `mongodump --archive --gzip` of the app DBs + a `tar` of the data dir
+   (`/usr/lib/unifi/data`), combined into **`test/e2e/unifi-seed.tgz`**.
 5. **Self-validates**: restores the fresh seed into throwaway volumes, boots, and
    curls the Integration API **with the minted key expecting 200** — failing
    loudly if the restored seed doesn't serve.
@@ -85,7 +107,7 @@ You end up with two committed artifacts:
 
 | File | What | Tracked via |
 |------|------|-------------|
-| `test/e2e/unifi-seed.tgz` | `mongodump` archive + `/config` tar | **git-lfs** |
+| `test/e2e/unifi-seed.tgz` | `mongodump` archive + data-dir (`/usr/lib/unifi/data`) tar | **git-lfs** |
 | `test/e2e/seed.env` | `UNIFI_APIKEY` + `NETWORK_VERSION` | plain git |
 
 > **Snapshot promptly.** Bake immediately after the wizard + key. The longer the
@@ -93,24 +115,26 @@ You end up with two committed artifacts:
 
 Review both, then commit. (This task leaves them uncommitted.)
 
-### Why mongodump + /config (not a raw volume snapshot)
+### Why mongodump + data-dir tar (not a raw volume snapshot)
 
 A `mongodump --archive --gzip` of the app DBs is **BSON, tiny** — a handful of MB
-— and `/config` is mostly the generated keystore + `system.properties`. That is
-far smaller and more portable than tarring raw Mongo data files, which is the
+— and the data dir (`/usr/lib/unifi/data`) is mostly the generated keystore (the
+entrypoint regenerates `system.properties` from env on every boot). That is far
+smaller and more portable than tarring raw Mongo data files, which is the
 size-minimization win the heavy harness lacked. `restore.sh` recreates the
 volumes from scratch, boots a throwaway `mongod` to `mongorestore` the archive
 (re-creating the `unifi` app user, which a DB-only dump doesn't carry), and
-untars `/config` — then the compose stack boots against pre-seeded volumes.
+untars the data dir — then the compose stack boots against pre-seeded volumes.
 
 ## Repeatable run — `make test-e2e`
 
 The deterministic path; no manual steps. It:
 
 1. Generates the Caddy cert (`gen-certs.sh`).
-2. Restores `unifi-seed.tgz` into fresh `mongo_data` + `unifi_config` volumes
+2. Restores `unifi-seed.tgz` into fresh `mongo_data` + `unifi_data` volumes
    (`restore.sh`).
-3. `docker compose up -d --wait`, then a **readiness gate** polling
+3. `docker compose build` (the pinned controller image, verifying the `.deb`
+   sha256) then `docker compose up -d --wait`, and a **readiness gate** polling
    `https://127.0.0.1:11443/proxy/network/integration/v1/sites` until non-gateway
    (mirrors the `test-mock` gate); fails loud on timeout.
 4. Runs the e2e-tagged Go tests with `UNIFI_E2E_ADDR=127.0.0.1:11443` and
@@ -135,14 +159,17 @@ make test-e2e
 The tests are env-gated: without `UNIFI_E2E_ADDR` they **skip**, so a bare
 `go test -tags e2e ./...` (the compile check) needs no controller.
 
-## Re-baking (image or spec bump)
+## Re-baking (spec bump)
 
-When you bump the pinned spec (`openapi/pin.env`) or a newer Network app image
-tag is available, the frozen seed can drift. Re-bake:
+When you bump the pinned spec (`openapi/pin.env`), bump the controller in lockstep
+(`controller/Dockerfile` `UNIFI_VERSION` + `UNIFI_SHA256` — see "Re-pinning"
+above) so the live tier stays on the exact spec version; the frozen seed can then
+drift. Re-bake:
 
 ```sh
-make e2e-bootstrap      # boots blank, prompts for wizard+key, re-snapshots
-# review the new seed.env NETWORK_VERSION, then:
+make e2e-bootstrap      # rebuilds the pinned image, boots blank, prompts for
+                        # wizard+key, re-snapshots
+# review the new seed.env NETWORK_VERSION (should be the new pinned version), then:
 git add test/e2e/unifi-seed.tgz test/e2e/seed.env   # tgz goes through git-lfs
 git commit
 ```
